# glo2lyx

./: README.md  glo2lyx.py  pyproject.toml
.github/workflows/: python-publish.yml
